NetworkPolicy/nginx-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-networkpolicy
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        # - ipBlock:
        #     cidr: 123.456.0.0/16
        #     except:
        #       - "789.101.0.0/16"
        - podSelector:
            matchLabels:
              app: ubuntu
          namespaceSelector:
            matchLabels:
              ns: nginx
      ports:
        - port: 80
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: ubuntu
          namespaceSelector:
            matchLabels:
              ns: nginx
      ports:
        - port: 80
          protocol: TCP
